--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Description: Metapackage to install an Openstack proxy node
 
 Package: openstack-compute-node
 Architecture: all
-Depends: ${misc:Depends}, nova-compute-kvm, nova-compute, nova-network, nova-api
+Depends: ${misc:Depends}, nova-compute-kvm, nova-compute, quantum-plugin-openvswitch-agent, nova-api
 Description: Metapackage to install an Openstack copmute node
  OpenStack is a reliable cloud infrastructure. Its mission is to produce
  the ubiquitous cloud computing platform that will meet the needs of public
