Added debconf machinery to automatically create endpoints

--- a/debian/control
+++ b/debian/control
@@ -42,7 +42,9 @@ Description: Metapackage to install an Openstack proxy node
 
 Package: openstack-compute-node
 Architecture: all
-Depends: ${misc:Depends}, nova-compute-kvm, nova-compute, quantum-plugin-openvswitch-agent, nova-api, quantum-dhcp-agent, quantum-l3-agent
+Depends: ${misc:Depends}, nova-compute-kvm, nova-compute,
+ quantum-plugin-openvswitch-agent, nova-api, quantum-dhcp-agent,
+ quantum-l3-agent, openstack-pkg-tools
 Description: Metapackage to install an Openstack copmute node
  OpenStack is a reliable cloud infrastructure. Its mission is to produce
  the ubiquitous cloud computing platform that will meet the needs of public
