--- a/debian/openstack-compute-node.config
+++ b/debian/openstack-compute-node.config
@@ -10,6 +10,7 @@ db_get openstack-compute-node/create_endpoints || true
 if [ "$RET" = "true" ] ; then
     db_input high openstack-compute-node/region || true
     db_input high openstack-compute-node/ip_address || true
+    db_input high openstack-compute-node/auth-token || true
     db_go
 fi
 
