--- a/debian/control
+++ b/debian/control
@@ -55,6 +55,9 @@ Package: openstack-proxy-node
 Architecture: all
 Pre-Depends: openstack-cloud-identity
 Depends: ${misc:Depends},
+ ceilometer-agent-central,
+ ceilometer-api,
+ ceilometer-collector,
  cinder-api,
  cinder-scheduler,
  glance,
@@ -78,6 +81,7 @@ Description: Metapackage to install an Openstack proxy node
 Package: openstack-compute-node
 Architecture: all
 Depends: ${misc:Depends},
+ ceilometer-agent-compute,
  nova-api,
  nova-cert,
  nova-compute,
