--- a/debian/control
+++ b/debian/control
@@ -86,6 +86,7 @@ Depends: ${misc:Depends},
  nova-cert,
  nova-compute,
  nova-compute-kvm,
+ nova-conductor,
  ntp,
  openstack-pkg-tools
 Pre-Depends: mysql-client
