Removed nova-console and added nova-consoleauth from -proxy-node.

--- a/debian/control
+++ b/debian/control
@@ -62,7 +62,7 @@ Depends: ${misc:Depends},
  cinder-scheduler,
  glance,
  nova-api,
- nova-console,
+ nova-consoleauth,
  nova-scheduler,
  nova-conductor,
  nova-consoleproxy,
