--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Package: openstack-clients
 Architecture: all
 Depends: python-cinderclient,
  python-glanceclient,
+ python-heatclient,
  python-keystoneclient,
  python-novaclient,
  python-quantumclient,
