Added mongodb-10gen-unstable, mongodb-nightly, mongodb-stable, mongodb-unstable and mongodb-10gen as possible candidates to replace mongodb.

--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Package: openstack-cloud-services
 Architecture: all
 Depends: dbconfig-common,
  memcached,
- mongodb,
+ mongodb | mongodb-10gen-unstable | mongodb-nightly | mongodb-stable | mongodb-unstable | mongodb-10gen,
  mysql-server,
  ntp,
  openvswitch-datapath-dkms,
