Fixed old VCS URLs.

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Uploaders: Julien Danjou <acid@debian.org>,
  Mehdi Abaakouk <sileht@sileht.net>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.4
-Vcs-Browser: http://git.gplhost.com/gitweb/?p=openstack/openstack-meta-packages.git;a=summary
-Vcs-Git: http://git.gplhost.com/openstack/openstack-meta-packages.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/openstack-meta-packages.git;a=summary
+Vcs-Git: git://anonscm.debian.org/git/openstack/openstack-meta-packages.git
 Homepage: http://openstack.alioth.debian.org/
 
 Package: openstack-clients
