Added heat in the controler package.

--- a/debian/control
+++ b/debian/control
@@ -71,6 +71,10 @@ Depends: ceilometer-agent-central,
  ceilometer-collector,
  ceilometer-alarm-evaluator,
  ceilometer-alarm-notifier,
+ heat-api,
+ heat-api-cfn,
+ heat-api-cloudwatch,
+ heat-engine,
  glance,
  nova-api,
  nova-conductor,
