--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,9 @@ Source: openstack-meta-packages
 Section: net
 Priority: extra
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
-Uploaders: Julien Danjou <acid@debian.org>,
-           Thomas Goirand <zigo@debian.org>,
-           Mehdi Abaakouk <sileht@sileht.net>
+Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9)
-Standards-Version: 3.9.4
+Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/openstack-meta-packages.git;a=summary
 Vcs-Git: git://anonscm.debian.org/openstack/openstack-meta-packages.git
 Homepage: http://openstack.alioth.debian.org/
