Added nova-compute-qemu as possible package instead of nova-compute-kvm.

--- a/debian/control
+++ b/debian/control
@@ -105,7 +105,7 @@ Depends: ceilometer-agent-compute,
          neutron-plugin-openvswitch-agent,
          nova-cert,
          nova-compute,
-         nova-compute-kvm,
+         nova-compute-kvm | nova-compute-qemu,
          novnc,
          ntp,
          openstack-pkg-tools,
