More excludes of tests.

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -2,6 +2,7 @@
 tempest.api.network.test_fwaas.*
 # Same here: no deployment yet of LBaaS
 tempest.api.network.test_load_balancer.*
+tempest.scenario.test_load_balancer.*
 # Same again: no deployment of VPNaaS
 tempest.api.network.test_vpnaas.*
 
@@ -25,3 +26,66 @@ tempest.api.volume.test_volume_metadata.VolumesV2MetadataTest
 tempest.api.volume.test_volume_metadata.VolumesV2MetadataTestXML
 tempest.api.volume.test_volume_transfers.VolumesV1TransfersTest.test_create_get_list_accept_volume_transfer
 tempest.api.volume.test_volume_transfers.VolumesV1TransfersTest.test_create_list_delete_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV1TransfersTestXML.test_create_get_list_accept_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV1TransfersTestXML.test_create_list_delete_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV2TransfersTest.test_create_get_list_accept_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV2TransfersTest.test_create_list_delete_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV2TransfersTestXML.test_create_get_list_accept_volume_transfer
+tempest.api.volume.test_volume_transfers.VolumesV2TransfersTestXML.test_create_list_delete_volume_transfer
+tempest.api.volume.test_volumes_actions.VolumesV1ActionsTest
+tempest.api.volume.test_volumes_actions.VolumesV1ActionsTestXML
+tempest.api.volume.test_volumes_actions.VolumesV2ActionsTest
+tempest.api.volume.test_volumes_actions.VolumesV2ActionsTestXML
+tempest.api.volume.test_volumes_extend.VolumesV1ExtendTest.test_volume_extend
+tempest.api.volume.test_volumes_extend.VolumesV1ExtendTestXML.test_volume_extend
+tempest.api.volume.test_volumes_extend.VolumesV2ExtendTest.test_volume_extend 
+tempest.api.volume.test_volumes_extend.VolumesV2ExtendTestXML.test_volume_extend
+tempest.api.volume.test_volumes_get.VolumesV1GetTest.test_volume_create_get_update_delete
+tempest.api.volume.test_volumes_get.VolumesV1GetTest.test_volume_create_get_update_delete_as_clone
+tempest.api.volume.test_volumes_get.VolumesV1GetTest.test_volume_create_get_update_delete_from_image
+tempest.api.volume.test_volumes_get.VolumesV1GetTestXML.test_volume_create_get_update_delete
+tempest.api.volume.test_volumes_get.VolumesV1GetTestXML.test_volume_create_get_update_delete_as_clone
+tempest.api.volume.test_volumes_get.VolumesV1GetTestXML.test_volume_create_get_update_delete_from_image
+tempest.api.volume.test_volumes_get.VolumesV2GetTest.test_volume_create_get_update_delete
+tempest.api.volume.test_volumes_get.VolumesV2GetTest.test_volume_create_get_update_delete_as_clone
+tempest.api.volume.test_volumes_get.VolumesV2GetTest.test_volume_create_get_update_delete_from_image
+tempest.api.volume.test_volumes_get.VolumesV2GetTestXML.test_volume_create_get_update_delete
+tempest.api.volume.test_volumes_get.VolumesV2GetTestXML.test_volume_create_get_update_delete_as_clone
+tempest.api.volume.test_volumes_get.VolumesV2GetTestXML.test_volume_create_get_update_delete_from_image
+tempest.api.volume.test_volumes_list.VolumesV1ListTestJSON
+tempest.api.volume.test_volumes_list.VolumesV1ListTestXML
+tempest.api.volume.test_volumes_list.VolumesV2ListTestJSON
+tempest.api.volume.test_volumes_list.VolumesV2ListTestXML
+tempest.api.volume.test_volumes_negative.VolumesV1NegativeTest
+tempest.api.volume.test_volumes_negative.VolumesV1NegativeTestXML
+tempest.api.volume.test_volumes_negative.VolumesV2NegativeTest
+tempest.api.volume.test_volumes_negative.VolumesV2NegativeTestXML
+tempest.api.volume.test_volumes_snapshots.VolumesV1SnapshotTestJSON
+tempest.api.volume.test_volumes_snapshots.VolumesV1SnapshotTestXML
+tempest.api.volume.test_volumes_snapshots.VolumesV2SnapshotTestJSON
+tempest.api.volume.test_volumes_snapshots.VolumesV2SnapshotTestXML
+tempest.api.volume.v2.test_volumes_list.VolumesV2ListTestJSON
+tempest.api.volume.v2.test_volumes_list.VolumesV2ListTestXML
+tempest.scenario.test_dashboard_basic_ops.TestDashboardBasicOps.test_basic_scenario
+tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_cryptsetup
+tempest.scenario.test_encrypted_cinder_volumes.TestEncryptedCinderVolumes.test_encrypted_cinder_volumes_luks
+tempest.scenario.test_load_balancer_basic.TestLoadBalancerBasic.test_load_balancer_basic
+tempest.scenario.test_minimum_basic.TestMinimumBasicScenario.test_minimum_basic_scenario
+tempest.scenario.test_volume_boot_pattern.TestVolumeBootPattern.test_volume_boot_pattern
+tempest.scenario.test_volume_boot_pattern.TestVolumeBootPatternV2.test_volume_boot_pattern
+
+# Router not found issue
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_pause_unpause
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_rebuild
+tempest.scenario.test_network_advanced_server_ops.TestNetworkAdvancedServerOps.test_server_connectivity_suspend_resume
+tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
+tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
+tempest.scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+
+# Floating IP not found issue
+tempest.scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
+
+# We don't have S3 or EC2 installed
+tempest.thirdparty.boto.test_s3.*
+tempest.thirdparty.boto.test_ec2.*
