Removed leading .* as tempest does it itself now

--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -1,10 +1,10 @@
 # No deployment of FWaaS, so we exclude them
-api.network.test_fwaas.*
+api.network.test_fwaas
 # Same here: no deployment yet of LBaaS
-api.network.test_load_balancer.*
-scenario.test_load_balancer.*
+api.network.test_load_balancer
+scenario.test_load_balancer
 # Same again: no deployment of VPNaaS
-api.network.test_vpnaas.*
+api.network.test_vpnaas
 
 # TODO: These are failing for some reason:
 api.volume.admin.test_snapshots_actions.SnapshotsActionsTest
@@ -87,5 +87,5 @@ scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenan
 scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
 
 # We don't have S3 or EC2 installed
-thirdparty.boto.test_s3.*
-thirdparty.boto.test_ec2.*
+thirdparty.boto.test_s3
+thirdparty.boto.test_ec2
