--- a/src/tempest_exclude.conf
+++ b/src/tempest_exclude.conf
@@ -23,6 +23,7 @@ scenario.test_network_basic_ops.TestNetworkBasicOps.test_hotplug_nic
 scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops
 scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_cross_tenant_traffic
 scenario.test_security_groups_basic_ops.TestSecurityGroupsBasicOps.test_in_tenant_traffic
+scenario.test_load_balancer
 
 # Floating IP not found issue
 scenario.test_snapshot_pattern.TestSnapshotPattern.test_snapshot_pattern
